force-app/main/default/objects/User/fields/Delegated_Approver__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Approver__c</fullName>
    <description>In the Event you are OOO, this User will receive all Approval Requests that would originally be routed to you</description>
    <inlineHelpText>In the Event you are OOO, this User will receive all Approval Requests that would originally be routed to you</inlineHelpText>
    <label>Delegated Approver</label>
    <relationshipName>Delegated_Approver</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>